Fix bug #45413: The "Current Request" text can not be displayed fully on mobile request page of Samsung

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -725,4 +725,8 @@ input[type=search]::-ms-clear {
 	.overtime-request-duration .dropdown-menu{
 		max-height: 80px;
 	}
+
+	#request-filter-row .form-control {
+		width: auto;
+	}
 }
